- Upgraded from using Java 8 to Java 11 - Updated YouTube API version