@@ -1,3 +1,9 @@
+plugins {
+    id 'application'
+    id 'com.gluonhq.client-gradle-plugin' version '0.1.31'
+    id 'org.openjfx.javafxplugin' version '0.0.8'
+}
+
 group 'io.github.stekeblad'
 version '1.4.1'
 
@@ -5,8 +11,8 @@ apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'application'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 sourceSets {
     main {
@@ -23,6 +29,43 @@ sourceSets {
         }
     }
 }
+
+javafx {
+    version = "11"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+repositories {
+    mavenCentral()
+}
+
+mainClassName = 'io.github.stekeblad.videouploader.main.Main'
+
+gluonClient {
+    bundlesList = ["**/*.properties"]
+    reflectionList = ["javafx.fxml.FXMLLoader"]
+    mainClassName = 'io.github.stekeblad.videouploader.main.Main'
+}
+
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', 'C:\\Program Files\\Java\\javafx-sdk-11\\lib',
+                '--add-modules', 'javafx.controls,javafx.fxml',
+        ]
+    }
+}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', 'C:\\Program Files\\Java\\javafx-sdk-11\\lib',
+                '--add-modules', 'javafx.controls,javafx.fxml',
+        ]
+        //classpath = files()
+    }
+}
+
 
 task generateVersionNumberFile(dependsOn: compileJava) {
     inputs.property "version", project.version
@@ -49,21 +92,24 @@ task makeMyJar(type: Jar, dependsOn: generateVersionNumberFile){
     with jar
 }
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
     // The YouTube API and its requirements
     compile 'com.google.api-client:google-api-client:1.30.5'
     compile 'com.google.oauth-client:google-oauth-client-jetty:1.30.4'
-    compile 'com.google.apis:google-api-services-youtube:v3-rev20200213-1.30.9'
+    compile 'com.google.apis:google-api-services-youtube:v3-rev20200618-1.30.9'
+
     // For the metadata-related features
     compile 'org.jcodec:jcodec:0.2.5'
+
     // Verifying downloaded updates are real and not from someone else
     compile 'com.google.crypto.tink:tink:1.3.0'
+
     // A better HTTP-client than the one built into Java
     compile 'com.squareup.okhttp3:okhttp:4.5.0'
+
+    // Java FX
+    compile 'org.openjfx:javafx-controls:11.0.1'
+    compile 'org.openjfx:javafx-fxml:11.0.1'
 }
 
 // https://developers.google.com/api-client-library/java/apis/youtube/v3
